--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 3. Install dependencies <- paste it here
+      # 3. Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -29,7 +29,12 @@ jobs:
 
       # 4. Run tests
       - name: Run tests
-        run: pytest -q tests
+        run: pytest -q
+
+      # 5. Lint code
+      - name: Lint code
+        run: flake8 .
+
 
       # 5. Lint code
       - name: Lint code
