--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,15 +25,24 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install flake8 pytest
-
-    - name: Lint code
-      run: flake8 app tests
 
     - name: Run tests
-      run: pytest tests
-
-    - name: Build Docker image (optional)
-      if: github.event_name == 'push'
       run: |
-        docker build -t secure-manage-app .
+        pytest
+
+    - name: Configure AWS
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1  # <-- replace with your region
+      run: |
+        aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+        aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+        aws configure set default.region $AWS_DEFAULT_REGION
+
+    - name: Push Docker image to ECR
+      run: |
+        docker build -t my-app:latest .
+        aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin <your-ecr-repo-uri>
+        docker tag my-app:latest <your-ecr-repo-uri>:latest
+        docker push <your-ecr-repo-uri>:latest
