--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1  # replace with your region
+          AWS_DEFAULT_REGION: us-east-1   # replace with your region
         run: |
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
@@ -26,6 +26,6 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker build -t my-app:latest .
-          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin <your-ecr-repo-uri>
-          docker tag my-app:latest <your-ecr-repo-uri>:latest
-          docker push <your-ecr-repo-uri>:latest
+          aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app
+          docker tag my-app:latest 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app:latest
+          docker push 123456789012.dkr.ecr.us-east-1.amazonaws.com/my-app:latest
