--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-~DATABASE_URL=
-SECRET_KEY=
+DATABASE_URL=postgresql://user:password@localhost:5432/devsecopsdb
+SECRET_KEY=change-me
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
