feat: add Bandit SAST security gate to CI

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,8 +26,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 🔐 SAST SECURITY GATE — Bandit
+      - name: Run Bandit (SAST)
+        run: |
+          pip install bandit
+          bandit -r . -ll
+
       - name: Run tests
         run: |
           pytest || echo "Skipping tests for now"
-
 
