--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-*.pyc
+# Python / OS
 __pycache__/
-.vscode/
-*.coverage
+*.pyc
+*.pyo
+*.pyd
+.DS_Store
+
+# Python / testing
 .pytest_cache/
-.env
+.coverage
